--- a/challenge_of_don_t_do/styles.css
+++ b/challenge_of_don_t_do/styles.css
@@ -1,24 +1,25 @@
 *{
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
 body{
+  font-family: cursive;
   height: 100vh;
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background-color: rgb(237, 250, 239);
+  padding: 5vh 0 0 5vw;
 }
 
 #challenge{
-  text-align: center;
   font-size: 6rem;
-  padding: 10%;
-}
-
-#change{
-  font-size: 2rem;
-  padding: 3% 10%;
+  height: 90vh;
+  width: 90vw;
+  background-color: rgb(164, 219, 219);
+  border-radius: 15px;
+  border: 4px solid rgb(80, 161, 161);
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
 }
